<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_traineefeedback"
            android:icon="@drawable/ic_home"
            android:title="Home Page" />

        <item
            android:id="@+id/nav_class"
            android:icon="@drawable/ic_class"
            android:title="@string/menu_class"/>

        <item
            android:id="@+id/nav_module"
            android:icon="@drawable/ic_module"
            android:title="@string/menu_module">
        </item>
            
         <item
            android:id="@+id/nav_join"
            android:icon="@drawable/ic_join"
            android:title="Join"/>

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"/>
            


    </group>
</menu>