<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activity.ClassicTrainerActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/leaguegothic_regular"
        android:gravity="center"
        android:text="@string/traineeList"
        android:textColor="@color/black"
        android:textSize="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvClassId1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/times_newroman"
            android:gravity="center"
            android:text="@string/classid"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvClassId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="TextView"
            android:textColor="@color/red" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvClassName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/times_newroman"
            android:gravity="center"
            android:text="@string/className"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvClassName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="TextView"
            android:textColor="@color/red" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_class"
        android:layout_width="match_parent"
        android:layout_height="400dp" />


    <Button
        android:id="@+id/btnBack"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_buttoncancel"
        android:text="Back"
        android:textColor="#fff" />
</LinearLayout>